<resources>
    <string name="app_name">DH Wallet</string>
    <string name="content_description_profile">foto do perfil</string>
    <string name="title_limit">Limite</string>
    <string name="content_description_credit_card_flag">bandeira visa</string>
    <string name="credit_card_title_name">Nome</string>
    <string name="credit_card_title_expire">VALIDADE</string>
    <string name="title_transfer">Transferir</string>
    <string name="search_hint">Busque por uma pessoa</string>
    <string name="title_contact">Contatos</string>
    <string name="transaction_label_entrada">Entradas</string>
    <string name="transaction_label_saida">Saídas</string>
    <string name="transaction_title">Transações</string>
    <string name="item_card_limit_label">Limite</string>
    <string name="item_card_brand_visa">Visa</string>
    <string name="item_card_num_generic">****</string>
    <string name="item_card_name_label">NOME</string>
    <string name="item_card_expire_label">VALIDADE</string>
    <string name="title_transaction">Transações</string>
    <string name="card_info_service">Serviços</string>
    <string name="card_info_payment">Pagamento</string>
    <!-- region Shared pref -->
    <string name="sharedpref">sharedpref_dh_wallet</string>
    <string name="contact_fav_key">contact_fav_key_%1$d</string>
    <string name="contact_fav_button_description">Botão favoritar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_card_info_transition">home_card_info</string>
    <string name="btn_scan">Ler código</string>
    <string name="share_contact">
        Olá, essa esses são seus dados:\nTransação: %1$s\nDo tipo: %2$s\nNo valor de: %3$s
    </string>
    <!-- endregion -->
</resources>