<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionFragment"
    android:background="@color/concrete">
    <View
        android:id="@+id/background_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_card_top"
        app:layout_constraintBottom_toBottomOf="@id/guide_header"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_backward"
        app:title="@string/transaction_title"
        app:titleTextColor="@color/white">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foto"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/transaction_label_entrada"
        style="@style/Subtitle.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="@string/transaction_label_entrada"
        app:layout_constraintBottom_toTopOf="@id/transaction_entrada"
        app:layout_constraintStart_toStartOf="@id/transaction_entrada" />

    <TextView
        android:id="@+id/transaction_entrada"
        style="@style/Title.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:drawableStartCompat="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toTopOf="@id/guide_header"
        app:layout_constraintEnd_toStartOf="@id/transaction_saida"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        tools:text="R$ 45,25" />

    <TextView
        android:id="@+id/transaction_label_saida"
        style="@style/Subtitle.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:text="@string/transaction_label_saida"
        app:layout_constraintBottom_toTopOf="@id/transaction_saida"
        app:layout_constraintStart_toStartOf="@id/transaction_saida" />


    <TextView
        android:id="@+id/transaction_saida"
        style="@style/Title.Inverted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        app:drawableStartCompat="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toTopOf="@id/guide_header"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toEndOf="@id/transaction_entrada"
        tools:text="R$ 536" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="223dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction_transaction_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_header" />

</androidx.constraintlayout.widget.ConstraintLayout>